--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -27,6 +27,12 @@
     padding: 1rem 2rem;
 }
 
+.acordeon .trigger h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    text-align: start;
+}
+
 .acordeon .trigger:hover {
     cursor: pointer;
 }
