--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -1,23 +1,22 @@
-.languages {
+.experience {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.languages li {
-    display: flex;
-    flex: row;
-    align-items: center;
-    padding-right: 1rem;
-    font-weight: 700;
-    font-size: 1rem;
+.experience li {
+    margin-bottom: 1rem;
 }
 
-.languages li::before {
+.experience li .period {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.experience li .period::before {
     content: "";
     display: inline-block;
     width: 1rem;
@@ -25,5 +24,5 @@
     margin-right: .5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/img/icons/check-icon.svg');
+    background-image: url('/assets/img/icons/calendar-icon.svg');
 }
