--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,15 +13,24 @@ body {
     color: #FFF;
 }
 
-.main {
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+main {
     margin: .5rem;
     padding: .5rem;
     border: 1px solid #FFF;
     border-radius: 1rem;
 }
 
-.main::before,
-.main::after  {
+main::before,
+main::after  {
     content: '';
     background-image: url(/assets/img/background.svg);
     background-repeat: no-repeat;
@@ -35,7 +44,7 @@ body {
     z-index: -1;
 }
 
-.main::after {
+main::after {
     content: '';
     top: auto;
     left: auto;
@@ -46,13 +55,13 @@ body {
 
 @media only screen and (min-width: 768px) {
 
-    .main {
+    main {
         max-width: 1024px;
         margin: 1rem auto;
     }
 
-    .main::before,
-    .main::after {
+    main::before,
+    main::after {
         width: 70vw;
     }
 }
