--- a/assets/css/languages.css
+++ b/assets/css/languages.css
@@ -25,5 +25,5 @@
     margin-right: .5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/img/icons/check-icon.svg');
+    background-image: url('../img/icons/check-icon.svg');
 }
