--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -24,5 +24,5 @@
     margin-right: .5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('../img/icons/calendar-icon.svg');
+    background-image: url('../img/icons/calendar.svg');
 }
